Fix padding on dedicated job on mobile

--- a/static/yc-styles.css
+++ b/static/yc-styles.css
@@ -855,6 +855,10 @@ legend {
 
 @media (max-width: 649px) {
 
+  .MobileRemoveFifteenPaddingLeft {
+    padding-left:0;
+  }
+
 	.FilterControl__TriggerMessageTooltip {
 		display:none;
 	}
